--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Describing your app",
   "main": "index.js",
   "scripts": {
-    "test": "",
+    "test": "mocha --opts mocha/mocha.opts 'src/**/__specs__/*-spec-jsx.js'",
     "build": "node_modules/.bin/gulp",
     "watch": "node_modules/.bin/gulp watch"
   },
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/company/repo",
   "dependencies": {
+    "babel": "^5.1.13",
     "browserify": "^10.2.4",
     "envify": "^3.4.0",
     "gulp": "^3.9.0",
@@ -29,7 +30,9 @@
     "gulp-sass": "^2.0.1",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.5",
+    "jsdom": "^3.1.2",
     "lodash": "^3.9.3",
+    "mocha": "^2.2.5",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "react-tools": "^0.13.3",
